--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,19 @@ section#assumptions ul {
 
 section#assumptions ul li {
   margin-top: 20px;
+  opacity: 0;
+}
+
+/* this is for animating the list items */
+.animated {
+  -webkit-animation-name: fadeInUp;
+   animation-name: fadeInUp;
+   -webkit-animation-duration: 1.5s;
+   animation-duration: 1.5s;
+   -webkit-animation-fill-mode: both;
+   animation-fill-mode: both;
+   -webkit-animation-delay: 0.5s;
+   animation-delay: 0.5s;
 }
 
 section#assumptions h3 {
