--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ section#huh .col-full {
 section#huh p {
   width: 600px;
   margin: auto;
-  padding: 50px 0 50px 0;
+  padding: 90px 0 50px 0;
   position: relative;
 }
 
@@ -215,7 +215,7 @@ section#huh h2 {
   width: 400px;
   position: absolute;
   left: 400px;
-  margin-top: 100px;
+  top: 500px;
 }
 
 section#presentations .col-full {
