--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,7 @@ section#lunch .col-left img.lunch {
   top: 0;
   left: 0;
   width: 500px;
+  max-width: 100%;
   height: auto;
 }
 
@@ -172,14 +173,14 @@ section#lunch .col-left img.paint {
   position: absolute;
   bottom: 100px;
   right: 350px;
-  width: 160px;
+  max-width: 160px;
 }
 
 section#lunch .col-left h2 {
   position: absolute;
   bottom: 10px;
   right: 0px;
-  width: 400px;
+  max-width: 400px;
 }
 
 section#lunch .col-right {
@@ -236,6 +237,7 @@ section#presentations h2 {
   position: absolute;
   top: 250px;
   left: 70px;
+  z-index: 10;
 }
 
 section#presentations img {
@@ -306,7 +308,7 @@ section#participation h2 {
   position: absolute;
   left: 230px;
   bottom: 50px;
-  width: 700px;
+  max-width: 700px;
   text-align: center;
 }
 
