--- a/css/animation.css
+++ b/css/animation.css
@@ -32,7 +32,7 @@
     -webkit-transform: translate3d(0, 10%, 0);
     transform: translate3d(0, 10%, 0);
   }
-  20% {
+  40% {
     opacity: 1;
     -webkit-transform: none;
     transform: none;
@@ -54,7 +54,7 @@
     -webkit-transform: translate3d(0, 10%, 0);
     transform: translate3d(0, 10%, 0);
   }
-  20% {
+  40% {
     opacity: 1;
     -webkit-transform: none;
     transform: none;
@@ -77,7 +77,7 @@
     -webkit-transform: translate3d(0, 10%, 0);
     transform: translate3d(0, 10%, 0);
   }
-  20% {
+  40% {
     opacity: 1;
     -webkit-transform: none;
     transform: none;
@@ -95,7 +95,7 @@
     -webkit-transform: translate3d(0, 10%, 0);
     transform: translate3d(0, 10%, 0);
   }
-  20% {
+  40% {
     opacity: 1;
     -webkit-transform: none;
     transform: none;
@@ -104,5 +104,41 @@
     opacity: 1;
     -webkit-transform: none;
     transform: none;
+  }
+}
+
+@keyframes simpleFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes simpleFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes simpleFadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes simpleFadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
