--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,12 @@ img {
   width: 40em;
   height: 75vh;
   position: relative;
+  -webkit-animation-name: simpleFadeIn;
+   animation-name: simpleFadeIn;
+   -webkit-animation-duration: 3s;
+   animation-duration: 3s;
+   -webkit-animation-fill-mode: both;
+   animation-fill-mode: both;
 }
 
 #container-classroom-infographic img {
@@ -283,7 +289,9 @@ div#index-container-fade-3 p {
   left: 50%;
 }
 
-#container-questions-explanation p:first-of-type {
+#container-questions-explanation p:first-of-type,
+#container-stories-explanation-1 p:first-of-type,
+#container-stories-explanation-2 p:first-of-type {
   margin-bottom: 1rem;
 }
 
@@ -313,7 +321,7 @@ p#questions-para-fade-2 {
 }
 
 .question {
-  padding-top: 12rem;
+  padding-top: 25%;
   text-align: left;
 }
 
@@ -338,7 +346,7 @@ p#questions-para-fade-2 {
   font-size: 0.9rem;
   color: white;
   width: 13rem;
-  font-family: "Avenir", sans-serif;
+  font-family: "myAvenir", sans-serif;
 }
 
 .question #container-other-input {
@@ -393,6 +401,161 @@ p#questions-para-fade-2 {
   margin: 10px 0;
   border: 1px solid white;
 }
+
+/* ----------------------------- stories page styling ----------------------------- */
+
+#bg-stories {
+  background-image: url("../img/bg-stories.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+  text-align: center;
+}
+
+#container-stories-explanation-1,
+#container-stories-explanation-2 {
+  position: absolute;
+  width: 100%;
+  top: 30%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  left: 50%;
+   -webkit-animation-duration: 2s;
+   animation-duration: 2s;
+   -webkit-animation-fill-mode: both;
+   animation-fill-mode: both;
+}
+
+#container-stories-explanation-1 {
+  -webkit-animation-delay: 6s;
+  animation-delay: 6s;
+  -webkit-animation-name: simpleFadeOut;
+   animation-name: simpleFadeOut;
+}
+
+#container-stories-explanation-2 {
+  -webkit-animation-delay: 8s;
+  animation-delay: 8s;
+  -webkit-animation-name: simpleFadeIn;
+   animation-name: simpleFadeIn;
+}
+
+p#stories-para-fade-1,
+p#stories-para-fade-2,
+p#stories-para-fade-3,
+p#stories-para-fade-4 {
+  -webkit-animation-name: fadeIn;
+   animation-name: fadeIn;
+   -webkit-animation-duration: 3s;
+   animation-duration: 3s;
+   -webkit-animation-fill-mode: both;
+   animation-fill-mode: both;
+   max-width: 40em;
+}
+
+p#stories-para-fade-2 {
+  opacity: 0;
+   -webkit-animation-delay: 3s;
+   animation-delay: 3s;
+}
+
+p#stories-para-fade-3 {
+  opacity: 0;
+   -webkit-animation-delay: 9s;
+   animation-delay: 9s;
+}
+
+p#stories-para-fade-4 {
+  opacity: 0;
+   -webkit-animation-delay: 14s;
+   animation-delay: 14s;
+}
+
+section#stories-explanation {
+  height: 40vh;
+}
+
+section#story-selection {
+  height: 60vh;
+}
+
+#container-brushes {
+  -webkit-animation-name: simpleFadeIn;
+   animation-name: simpleFadeIn;
+   -webkit-animation-duration: 2s;
+   animation-duration: 2s;
+   -webkit-animation-fill-mode: both;
+   animation-fill-mode: both;
+   -webkit-animation-delay: 17s;
+   animation-delay: 17s;
+   margin: auto;
+   width: 40em;
+   height: 100%;
+   position: relative;
+}
+
+.container-brush {
+  position: absolute;
+}
+
+.container-brush#ruiwen {
+  right: 0;
+}
+
+.container-brush#grant {
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+#container-brushes img {
+  max-height: 90%;
+}
+
+.container-story-text {
+  position: absolute;
+  font-family: "Harriet", serif;
+  letter-spacing: 0.08rem;
+  color: #555;
+  top: 32%;
+}
+
+.container-story-text h4 {
+  font-size: 0.9rem;
+  font-weight: normal;
+}
+
+.container-story-text {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+}
+
+#container-brushes .brush-link {
+  position: absolute;
+  display: inline-block;
+  width: 20%;
+  height: 90%;
+  transform: rotate(30deg);
+  pointer-events: none; /* this stops users from clicking on stories before fadey stuff ends. enabled via javascript after fadey stuff ends */
+}
+
+#container-brushes #brush-link-vivian {
+  left: 15%;
+  top: 0;
+}
+
+#container-brushes #brush-link-grant {
+  left: 40%;
+  top: 0;
+}
+
+#container-brushes #brush-link-ruiwen {
+  left: 70%;
+  top: 0;
+}
+
 /* ----------------------------- story styling ----------------------------- */
 
 section h2 {
