skip link bounces, fixes video bug, link to stories on home page

--- a/css/animation.css
+++ b/css/animation.css
@@ -142,3 +142,27 @@
     opacity: 0;
   }
 }
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    margin-top: 0;
+  }
+	40% {
+    margin-top: -10px;
+  }
+	60% {
+    margin-top: -5px;
+  }
+}
+
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    margin-top: 0;
+  }
+  40% {
+    margin-top: -10px;
+  }
+  60% {
+    margin-top: -5px;
+  }
+}
