--- a/css/main.css
+++ b/css/main.css
@@ -259,6 +259,26 @@ div#index-container-fade-3 p {
   position: static;
 }
 
+#view-stories-link,
+#thanks-link {
+  position: absolute;
+  top: 50%;
+  font-size: 0.7rem;
+  letter-spacing: 0.2rem;
+  line-height: 0;
+  padding-bottom: 10px;
+}
+
+#view-stories-link {
+  right: 0;
+  transform: rotate(90deg);
+}
+
+#thanks-link {
+  left: 0;
+  transform: rotate(-90deg);
+}
+
 /* ----------------------------- questions styling ----------------------------- */
 
 #bg-questions {
@@ -535,7 +555,6 @@ section#story-selection {
   width: 20%;
   height: 90%;
   transform: rotate(30deg);
-  pointer-events: none; /* this stops users from clicking on stories before fadey stuff ends. enabled via javascript after fadey stuff ends */
 }
 
 #container-brushes #brush-link-vivian {
@@ -551,6 +570,10 @@ section#story-selection {
 #container-brushes #brush-link-ruiwen {
   left: 70%;
   top: 0;
+}
+
+.disable-click {
+  pointer-events: none; /* this stops users from clicking on buttons before fadey stuff ends. enabled via javascript after fadey stuff ends */
 }
 
 /* ----------------------------- story styling ----------------------------- */
@@ -891,7 +914,16 @@ body.noscroll {
   top: 80%;
 }
 
-#button-replay {
+#skip-video-link.bounce {
+  -webkit-animation-name: bounce;
+   animation-name: bounce;
+   -webkit-animation-duration: 1s;
+   animation-duration: 1s;
+   -webkit-animation-fill-mode: both;
+   animation-fill-mode: both;
+}
+
+.replay {
   position: absolute;
   display: none;
   top: 50%;
